feat: create navigation, create header

--- a/index.html
+++ b/index.html
@@ -12,3 +12,24 @@
         rel="stylesheet">
     <link rel="icon" href="assets/favico.ico">
     <title>CV Nadezda Rodionova</title>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul class="navigation">
+                <li class="navi"><a href="#contacts">Contacts</a></li>
+                <li class="navi"><a href="#about">About me</a></li>
+                <li class="navi"><a href="#skills">Skills</a></li>
+                <li class="navi"><a href="#code">Code examples</a></li>
+                <li class="navi"><a href="#exp">Experience</a></li>
+                <li class="navi"><a href="#educ">Education</a></li>
+                <li class="navi"><a href="#language">Language</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="top">
+            <img class="myfoto" src="assist/cvfototwst.jpg" alt="my foto">
+            <h1>Nadezda Rodionova</h1>
+        </div>
