feat: create main

--- a/index.html
+++ b/index.html
@@ -33,3 +33,90 @@
             <img class="myfoto" src="assist/cvfototwst.jpg" alt="my foto">
             <h1>Nadezda Rodionova</h1>
         </div>
+        <div class="over">
+            <div class="sidebar">
+
+                <div>
+                    <h2 id="contacts">Contacts</h2>
+                    <span>Moscow, Russia</span>
+                    <ul class="cont">
+                        <li>e-mail: me@nestapro.ru</li>
+                        <li>Discord: nesta#9761</li>
+                    </ul>
+                </div>
+                <div>
+                    <h2 id="skills">Skills</h2>
+                    <ul class="skill">
+                        <li>HTML and CSS</li>
+                        <li>Git</li>
+                        <li>JavaScript basic</li>
+                        <li>VSCode</li>
+                    </ul>
+                </div>
+                <div>
+                    <h2 id="language">Language</h2>
+                    <span>English A2</span>
+                </div>
+                <div>
+                    <h2 id="educ">Education</h2>
+                    <span>
+                <b>2003-2005<br>
+                Uiversity of the humanities and <br>
+                social sciences</b><br>
+                <i>Psychology</i><br>
+                Saint-Petersburg, Russia<br>
+                <br>
+                <b>2020<br>
+                Google</b><br>
+                <i>Internet Marketing Basics</i><br>
+                <br>
+                <b>2021-Until now<br>
+                Rolling Scopes School</b><br>
+                <i>JS / FRONT-END Developer</i><br>
+                <br>
+                    </span>
+
+                </div>
+            </div>
+
+            <div class="general">
+                <div>
+                    <h2 id="about">About me</h2>
+                    <span>
+                        For over 10 years I have been working as a manager in merchandising. Implemented agency-based
+                        contracts <br>and manufacturing companies. I've always wondered<br> how development works.
+                        And now I decided that it was time to learn this. I am purposeful, motivated to learn<br> new
+                        things.
+                        My goal is to reach the junior developer level in the next year. I strive for a high level of
+                        knowledge.
+                    </span>
+                </div>
+                <div>
+                    <h2 id="code">Code Examples</h2>
+                    <code>
+                function(){<br>
+                let counter =3;<br>
+                counter++<br>
+                alert (counter)<br>
+                }<br>
+                <br>
+                function(){<br>
+                let apple="2"<br>
+                let orange="3"<br>
+                alert (+apple + +orange)<br>
+                }<br>
+                <br>
+                unction(){<br>
+                for (let i = 0; i &lt; 3; i++)<br>
+                { alert( `number ${i}!` ); } <br>
+                } <br>
+             </code>
+                </div>
+                <div>
+                    <h2 id="exp">Experience</h2>
+                    <a href="https://i-nesta.github.io/rsschool-cv/">CV RS School</a>
+                </div>
+            </div>
+
+        </div>
+    </main>
