feat: create footer, change name foto

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="gg.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pushster&family=Roboto:ital,wght@0,100;0,300;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Pushster&family=Roboto:ital,wght@0,100;0,300;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="icon" href="assets/favico.ico">
     <title>CV Nadezda Rodionova</title>
@@ -30,7 +31,7 @@
     </header>
     <main>
         <div class="top">
-            <img class="myfoto" src="assist/cvfototwst.jpg" alt="my foto">
+            <img class="myfoto" src="assets/cvfoto.jpg" alt="my foto">
             <h1>Nadezda Rodionova</h1>
         </div>
         <div class="over">
@@ -60,20 +61,20 @@
                 <div>
                     <h2 id="educ">Education</h2>
                     <span>
-                <b>2003-2005<br>
-                Uiversity of the humanities and <br>
-                social sciences</b><br>
-                <i>Psychology</i><br>
-                Saint-Petersburg, Russia<br>
-                <br>
-                <b>2020<br>
-                Google</b><br>
-                <i>Internet Marketing Basics</i><br>
-                <br>
-                <b>2021-Until now<br>
-                Rolling Scopes School</b><br>
-                <i>JS / FRONT-END Developer</i><br>
-                <br>
+                        <b>2003-2005<br>
+                            Uiversity of the humanities and <br>
+                            social sciences</b><br>
+                        <i>Psychology</i><br>
+                        Saint-Petersburg, Russia<br>
+                        <br>
+                        <b>2020<br>
+                            Google</b><br>
+                        <i>Internet Marketing Basics</i><br>
+                        <br>
+                        <b>2021-Until now<br>
+                            Rolling Scopes School</b><br>
+                        <i>JS / FRONT-END Developer</i><br>
+                        <br>
                     </span>
 
                 </div>
@@ -120,3 +121,12 @@
 
         </div>
     </main>
+    <footer>
+        <a href="https://github.com/i-nesta"><img class="gh" src="assets/ghico.png" alt="github"></a>
+        <span class="yearfoot">2022</span>
+        <a href="https://rs.school/js/"><img class="rs" src="assets/rs_school_js.bmp" alt="rsschool"></a>
+
+    </footer>
+</body>
+
+</html>
