--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="gg.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -107,7 +107,7 @@
                 alert (+apple + +orange)<br>
                 }<br>
                 <br>
-                unction(){<br>
+                function(){<br>
                 for (let i = 0; i &lt; 3; i++)<br>
                 { alert( `number ${i}!` ); } <br>
                 } <br>
